--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Coursera Assignment 1</title>
 </head>
+
 <body>
-    
+    <div class="heading">
+        <h1>Our Menu</h1>
+    </div>
+    <div class="row">
+        <div class="section col-lg-4 col-md-6 col-sm-12">
+            <div class="title-box">Chicken</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aspernatur in illo
+                assumenda, mollitia illum repellat velit officiis molestias incidunt quisquam fugiat obcaecati
+                quidem
+                sequi voluptas laudantium animi accusamus adipisci?
+            </p>
+        </div>
+
+        <div class="section col-lg-4 col-md-6 col-sm-12">
+            <div class="title-box">Beef</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, amet. Consequatur dolore
+                magni saepe totam dignissimos vel beatae? Modi atque mollitia repellat voluptates, cupiditate nihil
+                rerum eligendi quibusdam officiis obcaecati!
+            </p>
+        </div>
+
+        <div class="section col-lg-4 col-md-12 col-sm-12">
+            <div class="title-box">Sushi</div>
+            <p id="p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum repellendus nulla delectus
+                et velit. Quisquam tenetur sunt maiores? Praesentium et soluta optio aut excepturi tempora commodi
+                deserunt dolore laudantium. Perspiciatis.
+            </p>
+        </div>
+    </div>
 </body>
+
 </html>
